...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/button_padding">

            <TextView
                android:id="@+id/tv_username_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello, User"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
...
